# ohjime

./: .gitignore  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: deploy-docs.yaml
.obsidian/: appearance.json  community-plugins.json  hotkeys.json  workspace-mobile.json  workspace.json
.obsidian/plugins/anything-as-md/: main.js  manifest.json
.obsidian/plugins/chat-bubble-renderer/: main.js  manifest.json  styles.css
.obsidian/plugins/file-explorer-plus/: data.json
.obsidian/plugins/obsidian-git/: data.json
.obsidian/plugins/obsidian-hider/: data.json
.obsidian/plugins/quickadd/: data.json
.obsidian/snippets/: ant.css
brain/thoughts/: README.md
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/blog/: authors.yml
docs/notes/: index.md
docs/src/css/: global.css
docs/static/: browserconfig.xml  manifest.json
docs/things/: thing1.md
dump/: LOG-2026-07-21.md
manage/src/: .env.example  .gitignore  README.md  check_vllm.py  dump_ops.py  pyproject.toml  summarize.py
manage/src/deploy/: install.sh  ohjime-summarizer.service  ohjime-summarizer.timer  ohjime-vllm.service  uninstall.sh  vllm.env.example
manage/src/scripts/: enable_service_tools.sh
manage/src/vllm_agent/: __init__.py  agent.py
src/management/: .env.example  README.md  main.py  pyproject.toml
src/management/docker/: Dockerfile  compose.yaml  setup-nvidia-container-toolkit.sh
src/management/docker/patches/: apply_pr39018.py
src/management/scripts/: serve_vllm.sh
src/management/vllm_agent/: agent.py
templates/: DUMP.md
(+25 files in other folders)
